# nomad-botherer

./: .bazelrc  .env.example  .gitignore  BUILD.bazel  CHANGELOG.md  CLAUDE.md  Dockerfile  MODULE.bazel  Makefile  README.md  buf.gen.yaml  go.mod  go.sum
.github/workflows/: docker.yml  proto-check.yml  test.yml
cmd/nbctl/: BUILD.bazel  commands.go  commands_test.go  root.go
cmd/nomad-botherer/: BUILD.bazel  main.go
cmd/nomad-gitops/: main.go
docs/: README.md  applying-changes.md  configuration.md  development.md  faq.md  job-selection.md  meta-keys.md  monitoring.md  nomad-versions.md  philosophy.md  prior-art.md  rollback.md  use-cases.md
docs/design/: automatic-rollback.md  gitops-job-updates.md  nomad-auth.md  update-policies.md
docs/proposals/: automatic-rollback.md  change-checkpointing.md  diun-integration.md  gitops-job-updates.md  update-policies.md
docs/setup/: git-access.md  installation.md  nomad-access.md  running.md  webhooks.md
examples/: nomad-botherer.hcl  nomad-gitops.hcl
internal/config/: BUILD.bazel  config.go  config_test.go
internal/gitwatch/: BUILD.bazel  watcher.go  watcher_clone_test.go  watcher_test.go
internal/grpcapi/: BUILD.bazel  doc.go  nomad_botherer.pb.go  nomad_botherer_grpc.pb.go
internal/grpcserver/: BUILD.bazel  server.go  server_test.go
internal/nomad/: BUILD.bazel  applier.go  apply_test.go  classify.go  classify_test.go  deregister_test.go  differ.go  differ_internal_test.go  differ_paths_test.go  differ_redact_test.go  differ_test.go  export_test.go  metachange.go  metachange_test.go  metacheck.go  metacheck_test.go  redact.go  redact_test.go  rollback.go  rollback_test.go  token.go  token_test.go  update.go  update_test.go
internal/server/: BUILD.bazel  api.go  render.go  render_internal_test.go  render_test.go  server.go  server_hardening_test.go  server_run_test.go  server_security_test.go  server_test.go
monitoring/: alerts.yml  prometheus.yml  recording_rules.yml
proto/: nomad_botherer.proto
scripts/: send-webhook.sh
tests/regression/: apply_test.go  auth_test.go  compat.go  drift_test.go  e2e_test.go  infra_test.go  main_test.go  metrics_test.go  security_test.go  selection_test.go
tools/: workspace_status.sh
