module(
    name = "nomad_botherer",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.38.0")

# Use the Go toolchain installed by the CI runner (actions/setup-go) or the
# developer's local Go installation. This avoids hardcoding a Go download URL
# that may not yet be in the rules_go SDK manifest.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# List every external Go module repo that BUILD files reference directly.
# Run 'bazel mod tidy' after adding new dependencies to keep this in sync.
use_repo(
    go_deps,
    "com_github_go_git_go_billy_v5",
    "com_github_go_git_go_git_v5",
    "com_github_go_playground_webhooks_v6",
    "com_github_hashicorp_nomad_api",
    "com_github_joho_godotenv",
    "com_github_prometheus_client_golang",
    "com_github_spf13_cobra",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
