module(
    name = "nomad_botherer",
    version = "0.0.0",
)

# rules_go 0.57.0 is the first release that handles Go 1.25 correctly.
# Earlier releases pass -installsuffix to 'go install std', which Go 1.21+
# rejects. Use go_sdk.host() so Bazel picks up the Go already installed in
# CI (via actions/setup-go) rather than downloading a separate copy.
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.44.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# List every external Go module repo that BUILD files reference directly.
# Run 'bazel mod tidy' after adding new dependencies to keep this in sync.
use_repo(
    go_deps,
    "com_github_go_git_go_billy_v5",
    "com_github_go_git_go_git_v5",
    "com_github_go_playground_webhooks_v6",
    "com_github_hashicorp_nomad_api",
    "com_github_joho_godotenv",
    "com_github_prometheus_client_golang",
    "com_github_spf13_cobra",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
