load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "nomad-botherer",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.version": "{STABLE_VERSION}",
        "main.commit": "{STABLE_GIT_COMMIT}",
        "main.buildDate": "{BUILD_TIMESTAMP}",
    },
    deps = [
        "//internal/config",
        "//internal/gitwatch",
        "//internal/grpcserver",
        "//internal/nomad",
        "//internal/server",
        "@com_github_joho_godotenv//:go_default_library",
    ],
)
