load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gitwatch",
    srcs = ["watcher.go"],
    importpath = "github.com/gerrowadat/nomad-botherer/internal/gitwatch",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config",
        "@com_github_go_git_go_billy_v5//memfs:go_default_library",
        "@com_github_go_git_go_git_v5//:go_default_library",
        "@com_github_go_git_go_git_v5//plumbing:go_default_library",
        "@com_github_go_git_go_git_v5//plumbing/object:go_default_library",
        "@com_github_go_git_go_git_v5//plumbing/transport:go_default_library",
        "@com_github_go_git_go_git_v5//plumbing/transport/http:go_default_library",
        "@com_github_go_git_go_git_v5//plumbing/transport/ssh:go_default_library",
        "@com_github_go_git_go_git_v5//storage/memory:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
    ],
)

go_test(
    name = "gitwatch_test",
    srcs = ["watcher_test.go"],
    embed = [":gitwatch"],
)
