load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpcapi",
    srcs = [
        "doc.go",
        "nomad_botherer.pb.go",
        "nomad_botherer_grpc.pb.go",
    ],
    importpath = "github.com/gerrowadat/nomad-botherer/internal/grpcapi",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
