load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpcserver",
    srcs = ["server.go"],
    importpath = "github.com/gerrowadat/nomad-botherer/internal/grpcserver",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/grpcapi",
        "//internal/nomad",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

# server_test.go is package grpcserver_test (external), so no embed.
go_test(
    name = "grpcserver_test",
    srcs = ["server_test.go"],
    deps = [
        "//internal/grpcapi",
        "//internal/grpcserver",
        "//internal/nomad",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
